Add custom icon

--- a/da-app/package.json
+++ b/da-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/genai": "^0.7.0",
+    "@google/generative-ai": "^0.24.0",
     "dotenv": "^16.4.7",
     "genai": "^0.0.18",
     "next": "15.2.4",
